--- a/project/style.css
+++ b/project/style.css
@@ -113,9 +113,57 @@ body{
     justify-content: space-around;
     background: rgb(214, 214, 214);
 }
-.allMoney{
+#allMoney{
     color:rgb(32, 240, 32);
 }
 #spentMoney{
     color: red;
+}
+#list{
+    display: flex;
+    flex-direction: column;
+}
+
+.list-price{
+    text-align: center;
+    padding: 12px;
+}
+#list>.list-all{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid lightgray;
+    padding :10px 12px;
+    gap: 10px;
+}
+#list .list-check{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   
+}
+.list-all>.inline{
+    flex:1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.date{
+    font-size: 10px;
+    color:lightgray;
+}
+#getColor{
+    color:rgb(32, 240, 32);
+}
+#spentColor{
+    color:red;
+}
+.delButton{
+    padding-top : 10px;
+}
+.plus{
+    color:rgb(32, 240, 32);
+}
+.minus{
+    color:red;
 }
